Animated, Icons and Views

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,29 @@
-<h1 class="title animate__tada">{{title}}</h1>
-<ul>
+<h1 class="title animated jackInTheBox">{{title}}</h1>
+<ul class="animated flipInX" *ngIf="mode=='list'">
   <p *ngIf="todos.length==0"><small>Não tem nenhuma tarefa hoje</small></p>
   <li *ngFor="let todo of todos">
-    {{todo.todo}} |
+    {{todo.title}} 
     <button *ngIf="!todo.done" (click)="markAsDone(todo)">Concluir</button>
-    <button *ngIf="todo.done" (click)="markAsUndone(todo)">Refazer</button>|
+    <button *ngIf="todo.done" (click)="markAsUndone(todo)">Refazer</button>
     <button (click)="remove(todo)">Remover</button>
   </li>
 </ul>
+<div id="modal" *ngIf="mode=='add'" class="animated flipInX">
+  <form [formGroup]="form">
+      <h1 class="text-center">Nova Tarefa</h1>
+      <input type="text" placeholder="Titulo da tarefa" maxlength="60" formControlName="title">
+      <small class="danger text-center" *ngIf="form.controls['title'].invalid  && !form.controls['title'].pristine">Este campo deve conter entre 3 e 60 caracteres<br></small>
+      <p class="text-center">
+        <button class="button" [disabled]="form.invalid" (click)="add()"><i class="far fa-save"></i> Salvar</button>
+      </p>
+  </form>
+</div>
 
-<form [formGroup]="form">
-  <fieldset>
-    <label for="">Tarefa: </label>
-    <input type="text" placeholder="Titulo da tarefa" maxlength="60" formControlName="title">
-    <!-- <small *ngIf="'form.controls.title.invalid  && !form.controls.title.pristine'">Este campo deve conter entre 3 e 60 caracteres</small> -->
-    <button class="button" [disabled]="form.invalid" (click)="add()">Salvar</button>
-  </fieldset>
-</form>
+<button class="add-button animated fadeInUp button" (click)="changeMode('add')" *ngIf="mode=='list'">
+  <i class="fas fa-plus-circle"></i>
+  Nova Tarefa
+</button>
+<button class="add-button animated fadeInUp button" (click)="changeMode('list')" *ngIf="mode=='add'">
+  <i class="fas fa-times"></i>
+  Cancelar
+</button>
