--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ li>button{
 
 li>button:hover {
     opacity: 1;
-    transition: opacity 1s;
+    transition: opacity 0.5s;
 }
 
 .title {
@@ -71,4 +71,36 @@ li>button:hover {
     font-size: 1em;
     padding-left: 50px;
     padding-right: 50px;
+}
+
+#modal {
+    text-align: left;
+    margin: 10px;
+    padding: 10px;
+    list-style: none;
+    background: #fff;
+    border-radius: 10px;
+    -webkit-box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0.39);
+    -moz-box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0.39);
+    box-shadow: 3px 4px 14px 0px rgba(0, 0, 0, 0.39)
+}
+
+input {
+    width: 100%;
+    line-height: 50px;
+    text-indent: 10px;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.danger{
+    display: flex;
+    background-color: #ff0000;
+    color: #fff;
+    font-weight: bold;
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
 }
